kubernetes/cluster/media/mass/mass.yaml
# Service: Music Assistant
# Ingress: mass.brhd.io
# Label: app.kubernetes.io/name: music-assistant
---
kind: Service
apiVersion: v1
metadata:
  name: music-assistant
  labels:
    app.kubernetes.io/name: music-assistant
  namespace: media
spec:
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095
  selector:
    app.kubernetes.io/name: music-assistant
---
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-lb
  namespace: media
  annotations:
    metallb.io/address-pool: service-pool
    metallb.io/loadBalancerIPs: "192.168.1.235"
spec:
  externalTrafficPolicy: Cluster
  allocateLoadBalancerNodePorts: false
  ports:
    - port: 8098
      protocol: TCP
      targetPort: 8098
  selector:
    app.kubernetes.io/name: music-assistant
  type: LoadBalancer
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: music-assistant
  labels:
    app.kubernetes.io/name: music-assistant
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: music-assistant
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: music-assistant
    spec:
      restartPolicy: Always
      hostNetwork: false
      containers:
        - image: ghcr.io/music-assistant/server:2.5.1
          name: music-assistant
          resources:
            requests:
              cpu: 100m
              memory: 500Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: music-assistant-config
              mountPath: /data
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: music-assistant-config
          persistentVolumeClaim:
            claimName: music-assistant-config
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
            readOnly: true
