kubernetes/cluster/media/mass/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant
  namespace: media
  labels:
    app.kubernetes.io/name: music-assistant
  annotations:
    kubernetes.io/ingress.class: public
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
    - host: mass.brhd.io
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: music-assistant
                port:
                  number: 8095
  tls:
    - hosts:
        - mass.brhd.io
